Stylesheet/emote/tag updates 2013-05-20

--- a/source-css/anotherponymotessub.css
+++ b/source-css/anotherponymotessub.css
@@ -268,3 +268,13 @@ Width: 200px;
 Height: 202px;
 background-image: url(%%doublehug%%) !important
 }
+
+a[href="/trixielyra"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 200px;
+Height: 200px;
+background-image: url(%%trixielyra%%) !important
+}
