--- a/source-css/applejack.css
+++ b/source-css/applejack.css
@@ -107,7 +107,7 @@ background-position: 0 -10px;
 
 /***Banner, background, bottom image***/
 #header {
-        background: url(%%banner2%%) repeat bottom left;
+        background: url(%%bannera2%%) repeat bottom left;
     border-bottom: 0px solid white
     }
 .side {background-color:#E3C19C;opacity:0.9;}
@@ -115,7 +115,7 @@ background-position: 0 -10px;
 .side .subtitle, .flairtoggle {color:black;}
 body {
 background-color: #E3C19C !important;
-    background: url(%%applestraw%%) no-repeat fixed center center
+    background: url(%%ajs3e2%%) no-repeat fixed center center
     }
 div.footer-parent:after {
     width: 960px;
