--- a/source-css/arborus.css
+++ b/source-css/arborus.css
@@ -43,7 +43,7 @@ content: " Hella Man Pregnant Pegasi"
 }
 
 /*emotes*/
-a[href|="/dyel"], a[href|="/darnsquids"], a[href|="/hcstare"], a[href|="/soweak"], a[href|="/twibedroomeyes"], a[href|="/momss"], a[href|="/scootahelm"], a[href|="/qtmark"], a[href|="/fruitamad"], a[href|="/pokerscratch"], a[href|="/dyer"], a[href|="/angryfrog"] {
+a[href|="/dyel"], a[href|="/darnsquids"], a[href|="/hcstare"], a[href|="/soweak"], a[href|="/twibedroomeyes"], a[href|="/momss"], a[href|="/scootahelm"], a[href|="/qtmark"], a[href|="/fruitamad"], a[href|="/pokerscratch"], a[href|="/dyer"], a[href|="/angryfrog"], a[href|="/needsmoarsleep"] {
     display: block;
     clear: none;
     float: left;
@@ -98,9 +98,9 @@ a[href|="/dyer"] {
 a[href|="/angryfrog"] {
     background-position: -100px -100px
     }
-
-
-
+a[href|="/needsmoarsleep"] {
+    background-position: -200px -100px
+    }
 
 a[href|="/stairmaster"] {
     display: block;
@@ -109,20 +109,6 @@ a[href|="/stairmaster"] {
     width: 300px;
     height: 392px;
     background-image: url(%%stairmaster%%) }
-
-
-
-
-a[href|="/needsmoarsleep"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 164px;
-    height: 200px;
-    background-image: url(%%scootasleep%%) }
-
-
-
 
 
 a[href|="/qcshit"] {
@@ -524,3 +510,19 @@ a[href|="/livingthedream"] {
     width: 133px;
     height: 140px;
     background-image: url(%%lyrafingers%%) }
+
+a[href|="/raritybj"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 155px;
+    height: 125px;
+    background-image: url(%%2AmIcRd%%)}
+
+a[href|="/stamponthebulb"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 118px;
+    height: 139px;
+    background-image: url(%%redtoxin2%%)
