--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -170,3 +170,33 @@ height:167px;
 background-repeat:no-repeat;
 background-image:url(%%highhoof%%);
 }
+
+a[href|="/ccsalute"] {
+display:block;
+clear:none;
+float:left;
+width:150px;
+height:130px;
+background-repeat:no-repeat;
+background-image:url(%%ccsalute%%);
+}
+
+a[href|="/ccstretch"] {
+display:block;
+clear:none;
+float:left;
+width:150px;
+height:139px;
+background-repeat:no-repeat;
+background-image:url(%%ccstretch%%);
+}
+
+a[href|="/ccyeah"] {
+display:block;
+clear:none;
+float:left;
+width:180px;
+height:170px;
+background-repeat:no-repeat;
+background-image:url(%%ccyeah%%);
+}
