--- a/source-css/gallopfrey.css
+++ b/source-css/gallopfrey.css
@@ -979,7 +979,7 @@ a[href|="/rdd11"], a[href|="/rdwclause"]{
     background-position: -70px -70px
 }
 a[href|="/dd21"],  a[href|="/dwanger"],
-a[href|="/rdr21"], a[href|="/rdwanger"]{
+a[href|="/rdd21"], a[href|="/rdwanger"]{
     background-position: -140px -70px
 }
 /*********************************************/
@@ -988,7 +988,7 @@ a[href|="/rdd02"], a[href|="/rdwha"]{
     background-position: -0px -140px
 }
 a[href|="/dd12"],  a[href|="/dwpaper"],
-a[href|="/rdr12"], a[href|="/rdwpaper"]{
+a[href|="/rdd12"], a[href|="/rdwpaper"]{
     background-position: -70px -140px
 }
 a[href|="/dd22"],  a[href|="/dwhuh"],
