--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1557,3 +1557,80 @@ a[href|="/girderpy"]
 	background-position: -222px -280px;
 }
 /* end GIR sheet */
+
+/* sheet 10 */
+a[href|="/longbon"],
+a[href|="/wmfluffle"],
+a[href|="/yourewinner"],
+a[href|="/truestory"],
+a[href|="/derpdatass"],
+a[href|="/tomxbloombergotp"],
+a[href|="/banjopony"],
+a[href|="/rdthor"],
+a[href|="/bacardibelledrama"],
+a[href|="/imablatheredprincess"],
+a[href|="/itssosmooth"]
+{
+    display: block;
+    clear: none;
+    float: left;
+    height: 140px;
+    background-image: url(%%sheet11%%)
+}
+a[href|="/longbon"]
+{
+	width: 133px;
+	background-position: -0px -0px;
+}
+a[href|="/wmfluffle"]
+{
+	width: 177px;
+	background-position: -133px -0px;
+}
+a[href|="/yourewinner"]
+{
+	width: 127px;
+	background-position: -0px -140px;
+}
+a[href|="/truestory"]
+{
+	width: 94px;
+	background-position: -127px -140px;
+}
+a[href|="/derpdatass"]
+{
+	width: 101px;
+	background-position: -221px -140px;
+}
+a[href|="/tomxbloombergotp"]
+{
+	width: 113px;
+	background-position: -0px -280px;
+}
+a[href|="/banjopony"]
+{
+	width: 105px;
+	background-position: -113px -280px;
+}
+a[href|="/rdthor"]
+{
+	width: 113px;
+	background-position: -218px -280px;
+}
+a[href|="/bacardibelledrama"]
+{
+	width: 192px;
+	background-position: -0px -420px;
+}
+a[href|="/imablatheredprincess"]
+{
+	width: 195px;
+	background-position: -192px -420px;
+}
+a[href|="/itssosmooth"]
+{
+	width: 249px;
+	background-position: -0px -560px;
+}
+
+/* end sheet 11 */
