--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -169,8 +169,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  clear:both;
  text-align:center;
  width:100%;
-/*Discombobulated Belle by /u/clap2times*/
- background-image:url(%%discombobulated-belle%%);
+ background-image:url(%%egstare%%);
  background-repeat:no-repeat;
  margin-bottom:-30px;
  background-position: 50% 100%;
