--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -281,7 +281,7 @@ a[href|="/roofies"] {
     background-position: -2106px -0px;
     width: 137px
     }
-a[href|="/nerdychriscandyvan"], a[href|="/yatta!"] {
+a[href|="/nerdychriscandyvan"], a[href|="/yatta!"], a[href|="/alpacalove"] {
     display: block;
     clear: none;
     float: left;
@@ -295,6 +295,10 @@ a[href|="/nerdychriscandyvan"] {
 a[href|="/yatta!"] {
     background-position: -310px -0px;
     width: 178px
+    }
+a[href|="/alpacalove"] {
+    background-position: -488px -0px;
+    width: 129px
     }
 
 /************MLP-LRG*************/
@@ -467,8 +471,8 @@ a[href|="/doublevision"] {
      height: 250px;
      }
 a[href|="/sstrixie"] {
-     background-position: -1018px -0px;
-     width: 160px;
+     background-position: -1019px -0px;
+     width: 159px;
      height: 200px;
      }
 a[href|="/lunanazi"] {
