--- a/source-css/mylittlemango.css
+++ b/source-css/mylittlemango.css
@@ -10,7 +10,7 @@ Added emotes (1/15/13)
 /* Header */
 
 #header-bottom-left:nth-of-type(n) {
-   background: url(%%mylittlemangobannerthing%%);
+   background: url(%%mango-banner-2-original%%);
    background-repeat: no-repeat;
    background-position: 50% 100%;
    height: 200px; 
@@ -59,7 +59,7 @@ body{background:url(%%bestmlmbackground%%) no-repeat fixed center center!importa
 
 /* Background Nightmode Fix */
 
-content #siteTable div[onclick="click_thing(this)"] {background-color: transparent!important;}
+.content #siteTable div[onclick="click_thing(this)"] {background-color: transparent!important;}
 body.res-nightmode:first-of-type > .content {background-color: transparent!important;}
 body.res-nightmode:first-of-type {background-color: transparent!important;}
 span[class="hover pagename redditname"] a:first-of-type { font-size: 1.6em !important; text-shadow: 0px 0px 6px #000; color: white; }
@@ -105,12 +105,12 @@ font-size: 0 !important;
 
 /***********Replacements***********/
 a.author[href$=hell00001]:before {
-    content: "CaptainMango12";
+    content: "Captain Mango12";
     font-size: 12px;
     }
 
 a.author[href$=butterfilly]:before {
-    content: "CaptainMango1";
+    content: "Captain Mango1";
     font-size: 12px;
     }
 
@@ -130,7 +130,7 @@ a.author[href$=V17Ds]:before {
     }
 
 a.author[href$=Captain_Awesomex]:before {
-    content: "CaptainAvocado-Fucker";
+    content: "Mango Sex Slave";
     font-size: 12px;
     }
 
@@ -160,7 +160,7 @@ a.author[href$=romneyfan]:after {
     }
 
 a.author[href$=Captain_Awesomex]:after {
-    content: " JUNGLE FEVER";
+    content: " Rapeable on Non-Rape Days Only";
     color: blue;
     font-size: 10px;
     }
@@ -607,3 +607,20 @@ a[href|="/scootajew"] { background-position: -0px -2168px; width: 100px; height:
 a[href|="/twimango"] { background-position: -0px -2268px; width: 100px; height: 100px; }
 a[href|="/catbug6"] { background-position: -0px -2368px; width: 100px; height: 100px; }
 a[href|="/badvibes"] { background-position: -0px -2468px; width: 150px; height: 100px; }
+
+a[href|="/queensquee"], a[href|="/mangosanwatchme"], a[href|="/queenadorbs"], a[href|="/queenpomf"], a[href|="/sweetiecool"], a[href|="/flutterotter"], a[href|="/rainbowgetithahahaha"], a[href|="/otter"], a[href|="/twiwhuuuuu"] {
+     display: block;
+     clear: none;
+     float: left;
+     background-image: url(%%toolazytonamethis%%) !important
+     }
+
+a[href|="/queensquee"] { background-position: -0px -0px; width: 130px; height: 200px; }
+a[href|="/mangosanwatchme"] { background-position: -0px -200px; width: 134px; height: 200px; }
+a[href|="/queenadorbs"] { background-position: -0px -400px; width: 200px; height: 192px; }
+a[href|="/queenpomf"] { background-position: -0px -592px; width: 200px; height: 154px; }
+a[href|="/sweetiecool"] { background-position: -0px -746px; width: 100px; height: 125px; }
+a[href|="/flutterotter"] { background-position: -100px -746px; width: 100px; height: 100px; }
+a[href|="/rainbowgetithahahaha"] { background-position: -100px -846px; width: 100px; height: 100px; }
+a[href|="/otter"] { background-position: -0px -871px; width: 100px; height: 100px; }
+a[href|="/twiwhuuuuu"] { background-position: -100px -946px; width: 100px; height: 100px; }
